[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Floor 1/NewGenerator.tscn" type="PackedScene" id=1]
[ext_resource path="res://worldgen_test_submit.gd" type="Script" id=2]

[node name="WorldGenPlayGround" type="Node2D"]

[node name="NewGenerator" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
margin_top = 775.0
margin_right = 1920.0
margin_bottom = 1075.0

[node name="OctaveSlider" type="HSlider" parent="Control"]
margin_top = 17.0
margin_right = 1044.0
margin_bottom = 45.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Label" type="Label" parent="Control/OctaveSlider"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -5.0
margin_right = 47.0
margin_bottom = 10.0
text = "Octave"

[node name="PersistenceSlider" type="HSlider" parent="Control"]
margin_top = 81.0
margin_right = 1044.0
margin_bottom = 109.0
max_value = 10.0
step = 0.1
value = 0.8

[node name="Label" type="Label" parent="Control/PersistenceSlider"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -5.0
margin_right = 47.0
margin_bottom = 10.0
text = "Persistence"

[node name="PeriodSlider" type="HSlider" parent="Control"]
margin_top = 145.0
margin_right = 1044.0
margin_bottom = 173.0
min_value = 1.0
max_value = 10.0
step = 0.1
value = 5.0

[node name="Label" type="Label" parent="Control/PeriodSlider"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -5.0
margin_right = 47.0
margin_bottom = 10.0
text = "Period"

[node name="LacunaritySlider" type="HSlider" parent="Control"]
margin_top = 209.0
margin_right = 1044.0
margin_bottom = 237.0
max_value = 10.0
step = 0.01
value = 0.75

[node name="Label" type="Label" parent="Control/LacunaritySlider"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -5.0
margin_right = 47.0
margin_bottom = 10.0
text = "Lacunarity"

[node name="Button" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -61.0
margin_right = 5.0
margin_bottom = 11.0
text = "Submit"
script = ExtResource( 2 )

[connection signal="pressed" from="Control/Button" to="Control/Button" method="_on_Button_pressed"]
[connection signal="update_worldgen" from="Control/Button" to="NewGenerator" method="_on_Button_update_worldgen"]
